--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ worker_processes auto;
 events {}
 stream {
     upstream backend {
-        server 157.180.19.155:80;
+        server gcp7x.bhtunnel.xyz:80;
     }
     server {
         listen 8080;
